--- a/resources/fragment.html
+++ b/resources/fragment.html
@@ -10,22 +10,20 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="styles.css">
-
+		<link rel="stylesheet" type="text/css" href="resources/styles.css">
+		<style>
+			.card-body {
+				margin: 10px;
+			}
+		</style>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
-		  <a class="navbar-brand" href="/">mind less notes - simple notes</a>
+			<a class="navbar-brand" href="/">mind less notes - simple notes</a>
 			<ul class="navbar-nav">
 			  <li class="nav-item">
 				<a class="nav-link" href="/notes">my notes</a>
 			  </li>
-			  <!--
-			  <li class="nav-item">
-				  <a class="nav-link" href="#">username</a>
-			  </li>
-			  -->
 			</ul>
-		  </div>
 		</nav>
 		<div id="note-box" class="container">
