--- a/resources/main.html
+++ b/resources/main.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" type="text/css" href="resources/styles.css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -31,8 +31,8 @@
 			<div class="card bg-light">
 				<div class="card-body border border-primary rounded">
 					<form action="/new" method="post">
-						<input type="text" id="note-title" name="note-title">
-						<textarea id="note-body" class="form-control" name="note-body" rows=20 cols=80></textarea>
+						<input id="note-title" name="note-title" class="form-control form-control-lg" type="text" placeholder="title">
+						<textarea id="note-body" class="form-control" name="note-body" rows=15 cols=80 placeholder="note text"></textarea>
 						<button id="submit-note" class="btn btn-primary">submit note</button>
 					</form>
 				</div>
