--- a/resources/main.html
+++ b/resources/main.html
@@ -17,13 +17,12 @@
 		  <a class="navbar-brand" href="/">mind less notes - simple notes</a>
 			<ul class="navbar-nav">
 			  <li class="nav-item">
-				<a class="nav-link" href="/notes">my notes</a>
+				  <a class="nav-link" href="/notes">my notes</a>
 			  </li>
-			  <!--
 			  <li class="nav-item">
-				  <a class="nav-link" href="#">username</a>
+				  <input id="search-bar" type="text">
+				  <button id="search-notes" class="btn btn-primary">search notes</button>
 			  </li>
-			  -->
 			</ul>
 		  </div>
 		</nav>
@@ -39,4 +38,14 @@
 			</div>
 		</div>
 	</body>
+	<script>
+		$('#search-notes').on('click', function() {
+			var search_query = $('#search-bar').val();
+			var encoded_search = encodeURIComponent(search_query);
+			console.log(encoded_search);
+			var final_url = "/search/" + encoded_search;
+			window.location.href = final_url;
+		});
+	</script>
 </html>
+
