--- a/resources/fragment.html
+++ b/resources/fragment.html
@@ -11,11 +11,6 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="resources/styles.css">
-		<style>
-			.card-body {
-				margin: 10px;
-			}
-		</style>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -23,6 +18,18 @@
 			<ul class="navbar-nav">
 			  <li class="nav-item">
 				<a class="nav-link" href="/notes">my notes</a>
+			  </li>
+			  <li class="nav-item">
+				  <input id="search-bar" type="text">
+				  <button id="search-notes" class="btn btn-primary">search notes</button>
+	<script>
+		$('#search-notes').on('click', function() {
+			var search_query = $('#search-bar').val();
+			if(search_query == "") return;
+			var final_url = "/search/" + encodeURI(search_query);
+			window.location.href = final_url;
+		});
+	</script>
 			  </li>
 			</ul>
 		</nav>
