--- a/resources/main.html
+++ b/resources/main.html
@@ -22,9 +22,16 @@
 			  <li class="nav-item">
 				  <input id="search-bar" type="text">
 				  <button id="search-notes" class="btn btn-primary">search notes</button>
+	<script>
+		$('#search-notes').on('click', function() {
+			var search_query = $('#search-bar').val();
+			if(search_query == "") return;
+			var final_url = "/search/" + encodeURI(search_query);
+			window.location.href = final_url;
+		});
+	</script>
 			  </li>
 			</ul>
-		  </div>
 		</nav>
 		<div id="note-box" class="container">
 			<div class="card bg-light">
@@ -38,14 +45,5 @@
 			</div>
 		</div>
 	</body>
-	<script>
-		$('#search-notes').on('click', function() {
-			var search_query = $('#search-bar').val();
-			var encoded_search = encodeURIComponent(search_query);
-			console.log(encoded_search);
-			var final_url = "/search/" + encoded_search;
-			window.location.href = final_url;
-		});
-	</script>
 </html>
 
