Fix CSS sourcing and note display.
Before, the CSS file paths were relative paths, not absolute paths. So
some pages weren't using the same css as the others, which was looking
less than perfect.

I also changed the /notes page so that it would display all of the
notes, rather than just the first line. This is better UI until I get it
to the point where each note title is a link.

--- a/resources/fragment.html
+++ b/resources/fragment.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="resources/styles.css">
+		<link rel="stylesheet" type="text/css" href="/resources/styles.css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
