--- a/resources/main.html
+++ b/resources/main.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="resources/styles.css">
+		<link rel="stylesheet" type="text/css" href="/resources/styles.css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm navbar-light bg-light">
